# sapper

./: .gitignore  CMakeLists.txt  README.md  project_start  project_start.bat
linux/: sapper
src/: main.cpp  main.hpp
src/game/: cell.hpp  game.cpp  game.hpp  map.cpp  map.hpp  render.cpp
src/glcore/: glcore.hpp  window.cpp  window.hpp
windows/: README.md  инструкция компиляции под windows.txt
